# neoqiv

./: .clang-format  .gitignore  Makefile  clang-format.sh  event.c  image.c  main.c  main.h  meson.build  meson_options.txt  options.c  qiv.desktop  qiv.h  utils.c  xmalloc.c  xmalloc.h
contrib/: qiv.spec
src/: event.c  image.c  main.c  main.h  options.c  qiv.h  qiv_icon.h  utils.c
